# trait_test

./: package.json  swanky.config.json
contracts/commons/: Cargo.toml
contracts/commons/src/: lib.rs
contracts/test/: Cargo.toml
contracts/test/src/: lib.rs
test/commons/: flipper.test.ts
test/test/: flipper.test.ts
