[package]
name = "commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ink_lang = { version = "3.4.0", default-features = false }
ink_prelude = { version = "3", default-features = false }
openbrush = { tag = "v2.3.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp22", "ownable", "reentrancy_guard"] }

[lib]
name = "commons"
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink_prelude/std",
    "openbrush/std",
]
ink-as-dependency = []